lab1/Test/L1-A-7-32.cmm
struct {
  int zWh = Ql || e7xv_B35HWgijsKP && _yIPXqurOI / 
    ! ! E69688gpNTG22SKkay ( R_WOs0RM = wLmhv1mwQkS >= 
    tM6ymcnW2KBiaXrD - - aO_1ZVZMd [ y6iuqcGyiYoPsYKrPPL1 
    || D5LrGaPypcfNRYT0K < ( DhqPMHCIrwV0zU = MZwfwnM_l7M 
    == dpSdjZP - ( P6HzQ4HpXi != ! PkwBrIq [ BpzjbfUk6u 
    > ( HHHT < aXxy40 + ( XhChtl0yCFt5o6imTw || flIMIYyiPFuCnDyh_nm 
    && aEXJpCQ / ( u_e2kk > esLj * BQ4Kg1jRAQzxVMKLJa5R 
    ( DzGm , yPrk ) + ! Q9QJj5 ) ) <= sznal3SzeT82J == 
    rF_bRWInvyMsr <= :P2I ) ] . WOS ) <= - - gdYAyDzjLuF 
    / 502626489.1022078395 - - 561491589 ) . SFj0TISVNWWqfqw5Ze0Q 
    ] ) + ! qg3tOxmkduw7YL2C6 ( ) * - zIHG3HRko6Fp4PwG4 
    ;
};
struct OY DCYnbYv ( ) {
  float adWfbRFMiK5eQ , o7f , y5CRl5AnguAEhx [ 567634597 
    ] ;
  while ( Fv_09DVik6gK )   return Ldrt0usaL6f ;

}
int ;
int ;
int jmtt 
;
int ;
struct Ev87CSixj ;
struct GqrJLMfd9QC55M8 ;
int ;
int ;
int pmUdFHUREQmgLeO7B , AVI625TVJ 

;
struct {
  struct OEwpgBfzf4dpvdnh {
    struct thj_SPFnj dJCkmy ;
  }CaJUwN5WLIgoYbjLHgv ;
  struct rj PWTQLbCx8Izar ;
};
struct qSIKeCbuD ;
int ;
int ;
int Tp2 ( int bK , int KVqbknvr6QVo ) {
  qDnvSHxcLUVUOz7rMb ;
  I9BtEjjz_wXpk9obrtU ;
  if ( KfLb_tL5A )   svqrAhi ;
else   if ( _g1ZLqQI )   eMEUeHZNn ;


  while ( Aal8 )   UbZQj ;

  if ( PId3lDY7b )   if ( AeA ) {
  }else   S7Ye ;


#}
int ;
int ;
